# google-tts-api

./: Cargo.toml  LICENSE  README.md
examples/: simple_tts_request.rs
src/: auth.rs  client.rs  jwt.rs  lib.rs
src/services/: composer.rs  media_source.rs  mod.rs  songbird.rs  synthesize.rs
src/types/: credentials.rs  mod.rs  synthesize.rs
